--- a/legal.html
+++ b/legal.html
@@ -191,9 +191,11 @@
     <p>For questions or permission requests, contact Matthew Burton at <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
   </div>
 
-  <footer>
-    <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
-  </footer>
+  <div style="margin-top:60px;">
+    <a href="index.html"><img src="/images/atom.gif" alt="Atomic Mills ホーム" style="width:100px; display:block; margin:0 auto;"></a>
+  </div>
+  
+  <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
 
 <script>
   window.onload = function() {
